--- a/public/promos/index.html
+++ b/public/promos/index.html
@@ -90,7 +90,7 @@
                                        <tbody>
                                           <tr>
                                              <td align="left" valign="middle" style="font-family: Helvetica, arial, sans-serif; font-size: 14px;color: #666666" st-content="viewonline" class="mobile-hide">
-                                                <a href="http://wwww.emprendevs.com/promos/index.html" style="text-decoration: none; color: #666666">Ver Online </a> 
+                                                <a href="http://emprendevs.com/promos/index.html" style="text-decoration: none; color: #666666">Ver Online </a> 
                                              </td>
                                           </tr>
                                        </tbody>
@@ -157,7 +157,7 @@
                                  <!-- start of image -->
                                  <td align="center" st-image="#">
                                     <div class="imgpop">
-                                       <a target="_blank" href="http://www.emprendevs.com"><img width="420" border="0" height="185" alt="" border="0" style="display:block; border:none; outline:none; text-decoration:none;margin:0" src="http://www.emprendevs.com/promos/img/emprendevs.png" class="banner"></a>
+                                       <a target="_blank" href="http://www.emprendevs.com"><img width="420" border="0" height="185" alt="" border="0" style="display:block; border:none; outline:none; text-decoration:none;margin:0" src="http://emprendevs.com/promos/img/emprendevs.png" class="banner"></a>
                                     </div>
                                  </td>
                               </tr>
