--- a/public/promos/index.html
+++ b/public/promos/index.html
@@ -116,7 +116,7 @@
                                              <td align="left" width="20" style="font-size:1px; line-height:1px;">&nbsp;</td>
                                              <td width="30" height="30" align="center">
                                                 <div class="imgpop">
-                                                   <a target="_blank" href="#">
+                                                   <a target="_blank" href="https://www.linkedin.com/grps/EmprenDevs-8386827/about?">
                                                    <img src="http://emprendevs.com/promos/img/in.png" alt="" border="0" width="30" height="30" style="display:block; border:none; outline:none; text-decoration:none;">
                                                    </a>
                                                 </div>
@@ -203,7 +203,7 @@
                                           <!-- content -->
                                           <tr>
                                              <td style="font-family: Helvetica, arial, sans-serif; font-size: 16px;; text-align:center; line-height: 24px; font-weight:bold;" st-content="fulltext-content">
-                                                <p style="margin: 30px 0 20px !important; color: #666666">13,14 y 15 de Noviembre en el Edificio CIDEL<br>Maipú 835, Rosario</p>
+                                                <p style="margin: 30px 0 20px !important; color: #666666">13, 14 y 15 de Noviembre en el Edificio CIDEL<br>Maipú 835, Rosario</p>
                                              </td>
                                           </tr>
                                           <!-- End of content -->
@@ -836,7 +836,7 @@
                                           <!-- Title -->
                                           <tr>
                                              <td style="font-family: Helvetica, arial, sans-serif; font-size: 30px; color: #333333; text-align:center; line-height: 30px;" st-title="fulltext-title">
-					<a href="http://emprendevs.com" target="_blank" style="margin-bottom:5px; display: inline-block; border:solid 2px #1abc9c; background: rgba(0,0,0,0); color: #1abc9c; font-size: 18px; text-transform:uppercase; width:300px; height:45px; line-height: 45px; margin:20px 0 " class="button">Más info </a></p>
+					<a href="http://emprendevs.com" target="_blank" style="margin-bottom:5px; display: inline-block; border:solid 2px #1abc9c; background: rgba(0,0,0,0); color: #1abc9c; font-size: 18px; text-transform:uppercase; width:300px; height:45px; line-height: 45px; margin:20px 0 " class="button">www.emprendevs.com </a></p>
                                              </td>
                                           </tr>
                                           <!-- End of Title -->
@@ -867,61 +867,5 @@
    </tbody>
 </table>
 <!-- end of full text -->
-<!-- Start of seperator -->
-<table width="100%" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" st-sortable="seperator">
-   <tbody>
-      <tr>
-         <td>
-            <table width="600" align="center" cellspacing="0" cellpadding="0" border="0" class="devicewidth">
-               <tbody>
-                  <tr>
-                     <td align="center" height="30" style="font-size:1px; line-height:1px;">&nbsp;</td>
-                  </tr>
-                  <tr>
-                     <td width="550" align="center" height="1" bgcolor="#d1d1d1" style="font-size:1px; line-height:1px;">&nbsp;</td>
-                  </tr>
-                  <tr>
-                     <td align="center" height="30" style="font-size:1px; line-height:1px;">&nbsp;</td>
-                  </tr>
-               </tbody>
-            </table>
-         </td>
-      </tr>
-   </tbody>
-</table>
-<!-- End of seperator -->  
-<!-- Start of Postfooter -->
-<table width="100%" bgcolor="#ffffff" cellpadding="0" cellspacing="0" border="0" id="backgroundTable" st-sortable="postfooter" >
-   <tbody>
-      <tr>
-         <td>
-            <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
-               <tbody>
-                  <tr>
-                     <td width="100%">
-                        <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="devicewidth">
-                           <tbody>
-                              <tr>
-                                 <td align="center" valign="middle" style="font-family: Helvetica, arial, sans-serif; font-size: 14px;color: #666666" st-content="postfooter">
-                                    Click para <a href="#" style="text-decoration: none; color: #0a8cce">Salir de la lista</a> 
-                                 </td>
-                              </tr>
-                              <!-- Spacing -->
-                              <tr>
-                                 <td width="100%" height="20"></td>
-                              </tr>
-                              <!-- Spacing -->
-                           </tbody>
-                        </table>
-                     </td>
-                  </tr>
-               </tbody>
-            </table>
-         </td>
-      </tr>
-   </tbody>
-</table>
-<!-- End of postfooter -->
-   
    </body>
    </html>
