--- a/public/promos/index.html
+++ b/public/promos/index.html
@@ -214,11 +214,11 @@
                                           <!-- content -->
                                           <tr>
                                              <td style="font-family: Helvetica, arial, sans-serif; font-size: 14px; color: #666666; text-align:center; line-height: 24px;" st-content="fulltext-content">
-                                                <p style="margin-bottom: 14px !important">Queremos desafiarte en el PRIMER HACKATHON PARA PROGRAMADORES CON ESPIRITU EMPRENDEDOR EN ROSARIO.</p>
+                                                <p style="margin-bottom: 14px !important">¿Sos programador? Queremos desafiarte a participar en esta experiencia única en Rosario.</p>
                                                 <p style="margin-bottom: 14px !important">Te proponemos que armes un equipo de entre 3 y 5 personas para realizar una <b>aplicación web o mobile en sólo 48 horas</b>. Si no tenés equipo, inscribite, nosotros te ayudamos a reunirte con otros programadores para que puedas sumarte a esta experiencia.</p>
                                                 <p style="margin-bottom: 14px !important">Tendrás que utilizar al menos una de estas <b>tecnologías</b>: Anyandgo.io, MongoDB,  Express,  AngulasJS,  NodeJS, Famous,  BackboneJS,  React,  Ionicframework, SailsJS, Auth0, HTML5 y CSS3. Además podrás usar: PHP, C#, Java, Ruby, Python, .Net, Android e iOS</p>
                                                 
-						<p style="margin-bottom: 14px !important">Habrá <b>premios</b> para los ganadores seleccionados por el <b>jurado</b> y por <b>popularidad</b> a través de la votación: chromecast, pack de Cloud server y hosting para los elegidos, entre otras sorpresas y sorteos.</p>
+						<p style="margin-bottom: 14px !important">Habrá <b>premios</b> para los ganadores seleccionados por el <b>jurado</b> y por <b>popularidad</b> a través de la votación: Chromecasts, pack de Cloud server y hosting para los elegidos, entre otras sorpresas y sorteos.</p>
                                                 
 						<!-- image -->
                                                       <tr>
