--- a/public/promos/index.html
+++ b/public/promos/index.html
@@ -434,7 +434,7 @@
                                           <!-- image 2 -->
                                           <tr>
                                              <td width="100%" align="center" class="devicewidth">
-                                                <a href="http://donweb.com/es-int/" target="_blank"><img src="http://emprendevs.com/auspiciantes/donweb.jpg" alt="" border="0" width="210" height="115" style="display:block; border:none; outline:none; text-decoration:none;margin-left:30px"></a>
+                                                <a href="http://donweb.com/" target="_blank"><img src="http://emprendevs.com/auspiciantes/donweb.jpg" alt="" border="0" width="210" height="115" style="display:block; border:none; outline:none; text-decoration:none;margin-left:30px"></a>
                                              </td>
                                           </tr>
                                        </tbody>
