--- a/public/promos/index.html
+++ b/public/promos/index.html
@@ -587,6 +587,9 @@
                                                 <a href="http://www.erapm.com.ar/" target="_blank"><img src="http://emprendevs.com/auspiciantes/era.png" alt="" border="0" width="200" height="100" style="display:block; border:none; outline:none; text-decoration:none;"></a>
                                              </td>
                                              <td width="100%" align="center" class="devicewidth">
+                                                <a href="http://www.ibm.com/ar-es/" target="_blank"><img src="http://emprendevs.com/auspiciantes/ibm.png" alt="" border="0" width="200" height="100" style="display:block; border:none; outline:none; text-decoration:none;"></a>
+                                             </td>
+                                             <td width="100%" align="center" class="devicewidth">
                                                 <a href="http://www.kodear.net/" target="_blank"><img src="http://emprendevs.com/auspiciantes/kodear.png" alt="" border="0" width="200" height="50" style="display:block; border:none; outline:none; text-decoration:none; margin-top: 10px"></a>
                                              </td>
                                           </tr>
